--- a/.env.local.example
+++ b/.env.local.example
@@ -1,2 +1,6 @@
 EXPO_PUBLIC_CHIME_API_URL=<check-readme>
 EXPO_PUBLIC_CHIME_API_REGION=<check-readme>
+EXPO_PUBLIC_TELLESCOPE_API_BASE_URL=https://staging-api.tellescope.com
+EXPO_PUBLIC_TELLESCOPE_USER_EMAIL=<your-tellescope-email>
+EXPO_PUBLIC_TELLESCOPE_USER_PASSWORD=<your-tellescope-password>
+EXPO_PUBLIC_TELLESCOPE_ENDUSER_ID=<check-readme>
